--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -290,15 +290,9 @@ The followings sections use a process of analysis of contradictions between syst
 
 ## C1 - contradictions involving the use of game programming and asset authoring tools
 
-This section addresses as area contradiction that arose in early stages of the programme, in particular P1 where because of the novel nature of the programme, there were difficulties in getting the mechanics of coding underway.  I now outline immediate strategies to address this issue and chart an evolution in tool use in the process of coding and game asset creation, charting the resulting tensions before focusing on the introduction of new tools in P2 to address these tensions.
+This section addresses  difficulties in getting the mechanics of coding underway and outlines evolution in tool use between P2 and P2.
 
-Given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them.
-
-**One of my goals for initial stages was to create an inclusive environment**
-
-In P1 I used several open design activities and ongoing processes to support the game design of participants. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game features to add and environmental story, tinkering with pixel-art character making, making craft collages for game backgrounds.
-
-In another stream, I lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes.
+There are a million ways to start a conversation. My main goals for the initial interaction with participants was to create an inclusive environment to explore the process of making games. To do this, in P1 I used several open design activities and ongoing processes to support the game design of participants. Early sessions involved, discussion about what makes a good arcade game, brainstorming on game features to add and environmental story, tinkering with pixel-art character making, making craft collages for game backgrounds. I also lent learners a laptop loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes.
 
 <!-- But this aspect was promising but lacked a structured exploration in sessions in a way which conveyed the limits of what our projects could achieve technically. -->
 
@@ -311,9 +305,12 @@ In another stream, I lent learners a laptop loaded with vintage arcade and conso
 
 It was only in week five of P1 that that I introduced the coding tools and processes. I had experience of teaching web coding but limited knowledge of how to code games. Thus during these five week that time I had been teaching myself the basics following my own repertoires and practices as a mostly self-taught coder.
 
-<!-- My own motivations for working with open source, authentic game authoring tools (explored in the introduction), steered me to draw on the documentation of the Mozilla community and select Phaser as a framework. -->
+My own motivations for working with open source, authentic game authoring tools (explored in the introduction), steered me to draw on the documentation of the Mozilla community and select Phaser as a framework.
+
 
 Coding games in webpages is a complex technical process  involving several interacting languages and processes (see appendix 5.x for a break down).
+
+Given the complexities of learning text based languages, significant areas of contradictions arose between the need of participants to use key tools to create games and their limited skills and experience in using them.
 
 <!-- The use of a code playground simplified this the process of publishing and editing (see LR).    -->
 
