edits of first section

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -122,24 +122,21 @@ DBR lacks a single argumentative grammar [@brase_knowledge_2024], a set of conce
 Sannino and Engestrom [@cole_toward_2014] propose the core principles of formative interventions, namely double stimulation and the process of rising to the concrete via a germ cell concept. In addition they note the importance of transformative agency, analysis of contradictions, expansion and evolution of design, and the importance of concept formation. This chapter uses this approach to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters.
 
 
-In particular, the evolution of the key pedagogical features is analysed via  emerging tensions between system elements in learning design. Exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase.
+<!-- In particular, the evolution of the key pedagogical features is analysed via  emerging tensions between system elements in learning design. Exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase. -->
 
-This wider focus requires that I move beyond a merely technical approach to incorporate observations from my reseach journal and additional session notes in a way which comprises an auto-ethnographic process as part of a TAS approach.
+In the previous chapter, I described phases of delivery of the formative intervention in the form of a family game making programme. To begin this chapter I describe activity by identifying activity units/systems, system elements and the complex nature of the object of activity at two scopes of activity using the context of vignette.
 
-In the previous chapter, I described phases of delivery of the formative intervention in the form of a family game making programme.
+THIS PROCESS NEEDED?
+I then take a wider focus including technical and social observations from my research journal, additional session notes, and analysis of created artefacts of games and documentation to continue the design narrative via an in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding participant identity within the game making activity.
 
-To begin this chapter I describe activity by identifying activity units/systems, system elements typical at early phases of the design, with a particular focus on the transformations happening in the object of the activity systems.
+The discussion section of this chapter includes a synthesis of key issue arising in the evolution of the learning design and signposts where reactions to this design are explore in following chapters.  
 
-
-This narrative is enriched by more in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding participant identity within the game making activity.
-
-The discussion section of this chapter includes a synthesis of key initial barriers to engaging this game making program and the resultant responses. A final section identifies game design patterns (GDPs) as a "germ cell" concept that emerged in several forms in the evolution of the learning design.
+Issues that arise include
+  - a final section identifies game design patterns (GDPs) as a "germ cell" concept that emerged in several forms in the evolution of the learning design.
 
 ## Vignette and broad analysis using an analysis of activity systems
 
-This section begins analysis of the learning intervention by elements of a typical activity system. To do this a summary of a vignette of illustative activity is intertwined with systems elements to illustrate some of the key features of the overall game making activity in relation to activity systems and relevant system elements.
-
-The full vignette is included as an appendix of this chapter as Appendix 4.t
+This section begins analysis of the learning intervention by elements of two scopes of activity system via an illustrative vignette. The full vignette is included as an appendix of this chapter as Appendix 4.t
 
 <!--
 [Link to online version here](https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit)) -->
@@ -147,8 +144,7 @@ The full vignette is included as an appendix of this chapter as Appendix 4.t
 
 ### Context of vignette
 
-
-The context of the learning environment situated within wider systems of activity. Three key systems are represented in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants.
+The context of the learning environment situated within wider systems of activity as represented in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants.
 
 <!--
 Other relevant objectives of re include: a desire to create a useful learning experience on the part of student helpers; participating with other home educators in a creative environment and thus building team and communication skills;. -->
@@ -158,13 +154,15 @@ Other relevant objectives of re include: a desire to create a useful learning ex
 
 ![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
 
-IS THIS NEEDED?
-Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
+IS THIS NEEDED HERE? MOVE?
+This chapter will show that diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system,
+Specifically, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
+
 
 <!-- The concept of idioculture is used in this study to deepen the description of the community dimension of 3GAT. -->
 <!-- GDPs ( conceptualised here as game design patterns), which while often implemented on an individual or pair scope, were also fed back into community activity.  -->
 
-### Vignette summary
+### Vignette summary - MERGE UP
 NOTE - WHAT IS NEEDED Here?
 THINK CLARIFY TERMS OF SUBJECT, COMMUNITY AND OBJECT /OBJECTIVE
 THINK ALSO DESIGN ARGUMENATION
@@ -237,6 +235,15 @@ Within the objective of adding or altering game features (also referred to as ga
 
 <!-- Contradictions conce
 rned with use of core tools and additional documentation and support are explored in two later sections of this chapter. -->
+
+
+#### Describing the complextity of the object at both Levels
+
+It includes element of  idioculture, emerging tools, the games created,
+Objectives, phyisical objects, and agreed motivations.
+Return to levels of activity leontiev.
+
+
 
 **idioculture elements move?**
 
