--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -167,7 +167,8 @@ NOTE - WHAT IS NEEDED Here?
 THINK CLARIFY TERMS OF SUBJECT, COMMUNITY AND OBJECT /OBJECTIVE
 THINK ALSO DESIGN ARGUMENATION
 
-The participant, a child Toby, has been working independently on the design of a platform game for several minutes of the session. As a facilitator, I draw the participants attention to the showcasing of their games to an external audience to focus their attention on completion of their games. Toby pays close attention to the challenge and variety of the game playing experience for his imagined audience of players. During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his actions. This objective is a part of the wider of the two acitivity systems outlined in this section.
+The participant, a child Toby, has been working independently on the design of a platform game for several minutes of the session. As a facilitator, I draw the participants attention to the showcasing of their games to an external audience to focus their attention on completion of their games.
+During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his actions. This objective is a part of the wider of the two activity systems outlined in this section.
 
 
 
@@ -194,28 +195,33 @@ While the object of making a game to share using the suggested tools is tacitly 
 <!--
 NOTE - More on large scope in AT terms? What is needed here? -->
 
-**Returning to the specifics of the vignette...**
-
-Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials.
+**Returning to the specifics of the vignette to start to explore the 2nd activity system**
 
 
-By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game.
+Toby's his imagined audience of players appears to drive a close attention to the challenge and variety of the game playing experience in the specifics of his level design. Within the activity system of making a game activity happening at an individual or pair work which emerged with distinctive characteristics. This scope of activity, takes an individual or parent/child paring as its subject, is outlined below in Fig 5.x
 
-In the vignette 5.T I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette above, Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
+Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
+QUOTE?
 
+Thus rather than the implementation of features as being interpreted only as sub-actions within the wider activity [LEONTIEVE], I view the implemention of game features in the form of game design patterns as an activity systems in its own right.
 
 ![Mid-level activity system of game making](./Pictures/At_dia_2_v1.png){width=95%}
 
 Fig 5.2 Activity system 2 -  Constructing a game feature by feature
 
+
+<!-- ( NOTE - or at least as as a key unit of analysis).  -->
+
 This scope of activity takes an individual or parent/child paring as its subject.
 
-Within the activity system of making a game, in analysis of video data and evolution of course resources from P2 onwards, I identified activity happening at an individual or pair work which emerged with distinctive characteristics.
+Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment. 
+The benefit of this in this context is to make a distinction between wider community tools and those used in more individual or pair work. In the vignette 5.T Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game.
 
-Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment. Participants also worked on audio and graphical assets to achieve this  objective.
+As part of the vignette dialogue, I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
 
-While is it possible, aligning with Levontev, to identify the implementation of features as actions within the wider activity, there is value in  treating of implementing each GDP as a sub-project or activity systems in its own right ( NOTE - or at least as as a key unit of analysis). Barab and colleagues justify smaller units in their study observing emerging practices in a technology rich learning environment [@barab_using_2002].
-QUOTE?
+
+
+
 
 
 
