--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -134,6 +134,26 @@ The discussion section of this chapter includes a synthesis of key issue arising
 Issues that arise include
   - a final section identifies game design patterns (GDPs) as a "germ cell" concept that emerged in several forms in the evolution of the learning design.
 
+
+
+
+#### MOVED LINK - Applying activity theory to surface contradictions and design tensions experienced by participants and facilitator/s
+
+NOTE - THIS WAS INTERUPTING FLOW - SO MOVED HERE
+
+Identifying shifts in participant activity in terms of scope facilitates analysis of the complex and interwoven cultural, social and personal actions in a communities activity [@rogoff_observing_1995]. Above, Toby shifts between the wider activity of making a game and sharing it with peers and narrower actions implementing concrete code structures. This aspect is developed in chapter five.
+
+In addition to these shifts in scope, analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate analysis of emerging tensions in the use of tools, resources and processes in the following section.
+
+The followings sections use a process of analysis of contradictions between system elements of the activity systems outlined above. The processes is a formative intervention (explored in chapter three) in that the surfacing of tensions due to changes in the learning design over time are examined. As noted in the introduction, this chapter explores the following areas of contradictions: contradictions in the technical tool use of design, contradictions shaping the development of supporting documentation, contradictions to do with issues of identity and the cultural dimension of participation.
+
+<!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
+
+<!-- I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. -->
+
+
+
+
 ## Vignette and broad analysis using an analysis of activity systems
 
 This section begins analysis of the learning intervention by elements of two scopes of activity system via an illustrative vignette. The full vignette is included as an appendix of this chapter as Appendix 4.t
@@ -144,58 +164,64 @@ This section begins analysis of the learning intervention by elements of two sco
 
 ### Context of vignette
 
-The context of the learning environment situated within wider systems of activity as represented in an illustration 4.x  below. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants.
+The context of the learning environment situated within wider systems of activity as represented in an illustration 4.x  below.
+
+![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
+
+Diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system. The diagram is necessary simplification of contextual factors and objectives of interacting, focusing on research goals on the part of the researcher, learning computing skills and concepts as a home education project and finally a broad aim of fun on the part of the children participants.
+
+The wider of the two activity systems explored in this section is represented in the diagram above as activity stemming from the intersection of wider activity systems.
 
 <!--
 Other relevant objectives of re include: a desire to create a useful learning experience on the part of student helpers; participating with other home educators in a creative environment and thus building team and communication skills;. -->
 
-<!-- NOTE MOVE PREVIOUS Chapter?  -->
+<!-- NOTE
+THINK CLARIFY TERMS OF SUBJECT, COMMUNITY AND OBJECT /OBJECTIVE - THINK ALSO DESIGN ARGUMENATION -->
 
 
-![Illustration 4.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
+### Exploring the wider of two activity systems
 
-IS THIS NEEDED HERE? MOVE?
-This chapter will show that diverse cultural and contextual factors from the original activity systems are played out in a new shared activity system,
-Specifically, while there is a nominal shared objective to the main activity, it the community contains diverse actors with different agendas.
+<!-- Within activity system at the scope, while there is a nominal shared object to the main activity to make games together, the community contains diverse actors with multiple objectives. -->
 
-
-<!-- The concept of idioculture is used in this study to deepen the description of the community dimension of 3GAT. -->
-<!-- GDPs ( conceptualised here as game design patterns), which while often implemented on an individual or pair scope, were also fed back into community activity.  -->
-
-### Vignette summary - MERGE UP
-NOTE - WHAT IS NEEDED Here?
-THINK CLARIFY TERMS OF SUBJECT, COMMUNITY AND OBJECT /OBJECTIVE
-THINK ALSO DESIGN ARGUMENATION
-
-The participant, a child Toby, has been working independently on the design of a platform game for several minutes of the session. As a facilitator, I draw the participants attention to the showcasing of their games to an external audience to focus their attention on completion of their games.
-During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his actions. This objective is a part of the wider of the two activity systems outlined in this section.
-
-
-
-![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v3.png){width=95%}
+![Illustration 4.x - Larger game making activity system  ](./Pictures/At_dia_1_v4.png){width=95%}
 
 Fig 4.1 : Activity system 1 - an emerging community of novice game makers community making games as a learning experience
 
 
-This scope of activity takes as a subject the community of individuals in the room as during the game making sessions. this includes parents, children, student helpers and myself as a researcher / facilitator. As explored in Chapter 3 and 4 the object of the activity shifted in early stages in P1 and P2, as the community at times needed to shift attention not only the construction of a game but also to the evolving group process and pedagogy to enable successful completion of the game coding project(s).
+Addressing the wider activity system, the scope of activity takes as a subject the community of individuals in the room  during the game making sessions. this includes parents, children, student helpers and myself as a researcher / facilitator. To simplify an initial description of the two systems explored in this section they are explored using extracts from a vigette of illustrative activty.
+
+Before the descriptive vignette, the participant, a child Toby, has been working independently on the design of a platform game for the first 5 minutes of the session. Then, in my role as session facilitator, I make a short opening announcement drawing the participants attention to the showcasing of their games to students in the building's foyer to help focus their attention on completion of their games.
+During the course of the session Toby invites many other group members to play his game. He initiates and responds to conversations around the difficultly of the game he has designed. The more immediate audience of his peers is clearly important to him in guiding his design decisions.
 
 
+
+
+
+
+**Complex object and objective - MOVE THIS AFTER BOTH?**
+
+While the object of activity at this level is initially set through my recruitment and introductionsas making a game to share using the suggested tools is tacitly agreed  deeper analyis reveals a mulitifacted object.
+
+As explored in Chapter 4 the object of the activity shifted in early stages in P1 and P2, as the community at times needed to shift attention not only the construction of a game but also to the evolving group process and pedagogy to enable successful completion of the game coding project(s).
+
+The in-session audience and peer group appeared to drive some additional motivations and objectives. One of which put simply was play and social interactions between participants.
+
+<!-- The concept of idioculture is used in this study to deepen the description of the community dimension of 3GAT. -->
+<!-- GDPs ( conceptualised here as game design patterns), which while often implemented on an individual or pair scope, were also fed back into community activity.  -->
 
 <!-- IS THIS RELEVANT HERE? -->
 The real or perceived audience of the completed games is relevant when considering the motivating objectives of participants at this level of activity. The explicit  target audience were students and staff in the Manchester Met Brooks building at a final showcase event where the created games were shared in arcade cabinets. An additional audience are friends and family who can be send the games to play online. However, a more immediate and tangible audience for the evolving games were peer game makers and facilitators during the making sessions.
 
 ![Carrot eater game with an self made arcade unit made from cardboard boxes](./Pictures/carroteater3.jpg){width=90%}
 
-While the object of making a game to share using the suggested tools is tacitly agreed through participation, the in-session audience and peer group appeared to drive some additional motivations and objectives. One of which put simply was play and social interactions between participants.
 
 <!-- These feed into the contradictions which emerge at this level of activity. -->
-
 <!-- IS THIS NEEDED? While the programme had a shared objective of making a game, there were tensions brought by the cultural factors and other objectives imported from other activity systems. The third contradiction explored in this chapter explores those tensions (including? ....). -->
 
 <!--
 NOTE - More on large scope in AT terms? What is needed here? -->
 
-**Returning to the specifics of the vignette to start to explore the 2nd activity system**
+### Exploring the 2nd activity system
 
 
 Toby's his imagined audience of players appears to drive a close attention to the challenge and variety of the game playing experience in the specifics of his level design. Within the activity system of making a game activity happening at an individual or pair work which emerged with distinctive characteristics. This scope of activity, takes an individual or parent/child paring as its subject, is outlined below in Fig 5.x
@@ -214,16 +240,10 @@ Fig 5.2 Activity system 2 -  Constructing a game feature by feature
 
 This scope of activity takes an individual or parent/child paring as its subject.
 
-Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment. 
+Activity was driven by learners setting goals, requesting help and then implement code structures based around altering or adding new features to the game using tools available in the learning environment.
 The benefit of this in this context is to make a distinction between wider community tools and those used in more individual or pair work. In the vignette 5.T Toby uses a variety of tools in the process of coding and testing his game including: a web based coding tool (code playground), a game template which he has used as the base of his game project and,  a menu of documentation linking to code examples and tutorials. By this stage of the process, Toby is able to browse a collection of game design patterns and use diverse of tools, resources and processes. Participants developed preferred approaches and tool choices especially in accessing help when adding a new feature to their game.
 
 As part of the vignette dialogue, I outline the two main sources of help at the level of adding a new feature to the game: "Here’s the tutorial and there’s the examples of code". In the course of the vignette Toby chose to access only a code example of the desired game behaviour. He did not, as some in the group were doing in this session, use the tutorial which provided more descriptive, step-by-step guidance. Other participants relied only on direct verbal help from myself or other participants (like Toby) to help them progress.
-
-
-
-
-
-
 
 <!-- One observation from he experimental course was that without signific
 
@@ -233,7 +253,6 @@ ant support, the process of making a game is complex and there are many possible
 
 **on operations / fluidity? Move?**
 
-
 While this vignette shows that the participant has developed fluid use of both software tools and documentation and support sources, these are areas where significant contradictions emerged which shaped the path of the support given.
 OPERATIONS - WHERE? MOVE
 
@@ -241,14 +260,11 @@ Within the objective of adding or altering game features (also referred to as ga
 
 <!-- Contradictions conce
 rned with use of core tools and additional documentation and support are explored in two later sections of this chapter. -->
-
-
 #### Describing the complextity of the object at both Levels
 
 It includes element of  idioculture, emerging tools, the games created,
 Objectives, phyisical objects, and agreed motivations.
 Return to levels of activity leontiev.
-
 
 
 **idioculture elements move?**
@@ -281,20 +297,6 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 <!-- While the limited example above of Toby's activity illustrates fun, additional data from interviews with this child and family back the broad goals above. [develop - perhaps an appendix or quotes] -->
 
 <!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
-
-
-
-#### LINK - Applying activity theory to surface contradictions and design tensions experienced by participants and facilitator/s
-
-Identifying shifts in participant activity in terms of scope facilitates analysis of the complex and interwoven cultural, social and personal actions in a communities activity [@rogoff_observing_1995]. Above, Toby shifts between the wider activity of making a game and sharing it with peers and narrower actions implementing concrete code structures. This aspect is developed in chapter five.
-
-In addition to these shifts in scope, analysis of community processes also involves transformation over time.  The next section offers a description of the evolution of tool use in different phases of the study with an aim to situate analysis of emerging tensions in the use of tools, resources and processes in the following section.
-
-The followings sections use a process of analysis of contradictions between system elements of the activity systems outlined above. The processes is a formative intervention (explored in chapter three) in that the surfacing of tensions due to changes in the learning design over time are examined. As noted in the introduction, this chapter explores the following areas of contradictions: contradictions in the technical tool use of design, contradictions shaping the development of supporting documentation, contradictions to do with issues of identity and the cultural dimension of participation.
-
-<!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
-
-<!-- I chart the detail of the evolution of resources and other responses used helps illuminate broader, systemic issues concerns in the overall activity [@barab_using_2002]. -->
 
 
 
